# serenity

./: README.md
AK/: Debug.h.in
Base/etc/: shellrc
Base/home/anon/.config/: IRCClient.ini  LaunchServer.ini
Meta/CMake/: all_the_debug_macros.cmake
Userland/Applications/: CMakeLists.txt
Userland/Applications/IRCClient/: CMakeLists.txt  IRCAppWindow.cpp  IRCAppWindow.gml  IRCAppWindow.h  IRCChannel.cpp  IRCClient.cpp  IRCClient.h  IRCQuery.cpp  IRCWindow.cpp  IRCWindow.h  IRCWindowListModel.cpp  main.cpp
Userland/Libraries/LibTLS/: HandshakeCertificate.cpp  TLSv12.h
